newtype-tools/tests/newtype-fail/newtype-path.stderr
error: expected `#[newtype(attr1, attr2)]`
 --> tests/newtype-fail/newtype-path.rs:2:3
  |
2 | #[newtype]
  |   ^^^^^^^
